# resigntool

./: LICENSE  README.md  example.ini  pylintrc  setup.cfg
src/resigntool/: main.py  sign.py
