[metadata]
name = resigntool
version = 1.0.0
description = Retrying wrapper around signtool

[options]
include_package_data = True
packages = find:
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
test = pylint

[options.entry_points]
console_scripts =
    resigntool = resigntool.main:run
